# PicoW_CO2_Sensor

./: +  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  font8x8_basic.h  lwip_import.cmake  main.c  picow_blink.c  screenlog.0  ssd1306.c  ssd1306.h
.github/workflows/: clang-analysis.yml
app/: CMakeLists.txt  main.c  main.h
app/i2c/: i2c.c  i2c.h
app/network/: tcp.c  wifi.h
app/scd40/: scd40.c  scd40.h
app/ssd1306/: display.c  display.h  framebuffer.c  framebuffer.h  ssd1306.c  ssd1306.h
app/tasks/: logging.c  logging.h  network_task.c  network_task.h  read_data_task.c  read_data_task.h  update_display_task.c  update_display_task.h
config/: FreeRTOSConfig.h  lwipopts.h
config/FreeRTOS-Kernel/: FreeRTOSConfig.h  IdleMemory.c  logging_levels.h  logging_stack.h
config/lwip/: lwipopts.h
config/lwip/org/: lwipopts_examples_common.h
ssd1306/: display.c  font8x8_basic.h  ssd1306.h
